# fork-manager

./: .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml  nix.yml  release.yml
fork_manager/: __init__.py  __main__.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  template.rs  update.sh
tests/: __init__.py  fork-manager.yaml  test_default.rs
