[dependencies]
clap = {features = ["derive", "env"], version = "4.5.39"}
clap_complete = "4.5.50"
minijinja = {features = ["custom_syntax"], version = "2.10.2"}
octocrab = "0.44.1"
regex = "1.11.1"
serde = {features = ["derive"], version = "1.0.219"}
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = {features = ["full"], version = "1.45.1"}

[dev-dependencies]
indoc = "2.0.6"

[package]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Automatize your fork"
edition = "2021"
keywords = ["git"]
license = "MIT OR Apache-2.0"
name = "fork-manager"
repository = "https://github.com/nim65s/fork-manager"
version = "0.4.1"

[package.metadata.release]
pre-release-replacements = [
  {file = "CHANGELOG.md", replace = "{{version}}", search = "unreleased"},
  {file = "CHANGELOG.md", replace = "{{date}}", search = "ReleaseDate"},
  {exactly = 1, file = "CHANGELOG.md", replace = "...{{tag_name}}\n[unreleased]: https://github.com/nim65s/{{crate_name}}/compare/{{tag_name}}...HEAD", search = "\\.\\.\\.HEAD"},
  {exactly = 1, file = "CHANGELOG.md", replace = "<!-- next-header -->\n\n## [unreleased] - ReleaseDate", search = "<!-- next-header -->"},
  {file = "default.nix", replace = "version = \"{{version}}\";", search = "version = \".*\";"}
]
