[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Automatize your fork"
name = "fork-manager"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9,<4"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.1"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["D", "I", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
